# mcp-gateway

./: .dockerignore  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE  PROMPT_ENGINEER_HANDOFF.md  README.md  docker-compose.yml
config/: default.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  health.rs  lib.rs  logger.rs  main.rs  proxy.rs  rate_limit.rs  routes.rs  state.rs  usage.rs  vault.rs
crates/gateway/tests/: integration.rs
crates/mcpgw/: Cargo.toml
crates/mcpgw/src/: main.rs
scripts/: quickstart.sh
